fixtures/frontend/milestone-2/invalid/truthy-falsy-branch-type-mismatch/main.aivi
val ready:Bool = True

val branch =
    ready
     T|> "start"
     F|> 0
